[package]
name = "api-tester"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = "0.24.1"
serde = {version = "1.0.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde_json = "1.0.107"
csv = "1.2.2"
dotenvy = "0.15.7"
once_cell = "1.18.0"
